--- a/MSPay/MSPay/appsettings.json
+++ b/MSPay/MSPay/appsettings.json
@@ -12,11 +12,13 @@
     "Jwt": {
       "Issuer": "https://sreasons.com",
       "Audience": "https://sreasons.com",
-      "Key": "Clave_Secreta2019",
+      "Key": "Smart_Clave_Secreta2019",
       "TokenExpirationInMinutes": 30
     }
   },
-  
+  "KeyVaultName": "keyvaultmssr",
+  "AzureApplicationId": "6b542c7e-1bf8-417a-aab7-232804c4a0cf",
+  "AzureSecretClient": "LoGx5rHOZKUjnkk0oKu1=N9.GcaKpN[-",
   "consulConfig": {
     "address": "http://localhost:8500",
     "serviceName": "MSPAYSERVICE",
