--- a/MSSecurity/MSSecurity/appsettings.json
+++ b/MSSecurity/MSSecurity/appsettings.json
@@ -2,11 +2,13 @@
   "spring": {
     "cloud": {
       "config": {
-        "uri": "http://localhost:8888"
+        "uri": "http://localhost:8888",
+        "username": "root",
+        "password": "s3cr3t"
       }
     },
     "application": {
-      "name": "serconf"
+      "name": "mssecurity"
     }
   },
   "Logging": {
@@ -14,38 +16,5 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "MongoConnection": {
-    //"ConnectionString": "mongodb://localhost",
-    //"Database": "db_security"
-  },
-  "Auth": {
-    "Jwt": {
-      "Issuer": "https://sreasons.com",
-      "Audience": "https://sreasons.com",
-      "Key": "Clave_Secreta2019",
-      "TokenExpirationInMinutes": 30
-    }
-  },
-  
-  "consulConfig": {
-    "address": "http://localhost:8500",
-    "serviceName": "MSSEGURIDADSERVICE",
-    "serviceID": "MSSEGURIDAD5001"
-  },
-  "eureka": {
-    "client": {
-      "shouldRegisterWithEureka": true,
-      "serviceUrl": {
-        "defaultZone": "http://localhost:8761/eureka"
-      },
-      "validateCertificates": false
-    },
-    "instance": {
-      "appName": "MSSEGURIDADSERVICE",
-      "hostName": "localhost",
-      "port": "5001"
-    }
-  }
-
+  "AllowedHosts": "*"
 }
