--- a/MSSecurity/MSSecurity/appsettings.json
+++ b/MSSecurity/MSSecurity/appsettings.json
@@ -16,5 +16,24 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "consulConfig": {
+    "address": "http://localhost:8500",
+    "serviceName": "MSSECURITYSERVICE",
+    "serviceID": "MSSECURITY5101"
+  },
+  "eureka": {
+    "client": {
+      "shouldRegisterWithEureka": true,
+      "serviceUrl": {
+        "defaultZone": "http://localhost:8761/eureka"
+      },
+      "validateCertificates": false
+    },
+    "instance": {
+      "appName": "MSSECURITYSERVICE",
+      "hostName": "localhost",
+      "port": "5001"
+    }
+  }
 }
