--- a/MSReverse/MSReverse/appsettings.json
+++ b/MSReverse/MSReverse/appsettings.json
@@ -1,4 +1,16 @@
 {
+  "spring": {
+    "cloud": {
+      "config": {
+        "uri": "http://localhost:8888",
+        "username": "root",
+        "password": "s3cr3t"
+      }
+    },
+    "application": {
+      "name": "msreverse"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
@@ -8,20 +20,23 @@
   "ConnectionStrings": {
     //"DefaultConnection": "Server=localhost;Port=5432;Database=db_credits;User Id=postgres;Password=12345;Search Path=esc_credits;"
   },
-  "Auth": {
-    "Jwt": {
-      "Issuer": "https://sreasons.com",
-      "Audience": "https://sreasons.com",
-      "Key": "Smart_Clave_Secreta2019",
-      "TokenExpirationInMinutes": 30
-    }
-  },
-  "KeyVaultName": "keyvaultmssr",
-  "AzureApplicationId": "6b542c7e-1bf8-417a-aab7-232804c4a0cf",
-  "AzureSecretClient": "LoGx5rHOZKUjnkk0oKu1=N9.GcaKpN[-",
   "consulConfig": {
     "address": "http://localhost:8500",
     "serviceName": "MSREVERSESERVICE",
     "serviceID": "MSREVERSE5004"
+  },
+  "eureka": {
+    "client": {
+      "shouldRegisterWithEureka": true,
+      "serviceUrl": {
+        "defaultZone": "http://localhost:8761/eureka"
+      },
+      "validateCertificates": false
+    },
+    "instance": {
+      "appName": "MSREVERSESERVICE",
+      "hostName": "localhost",
+      "port": "5004"
+    }
   }
 }
