--- a/MSSecurity/MSSecurity/MSSecurity.csproj
+++ b/MSSecurity/MSSecurity/MSSecurity.csproj
@@ -7,11 +7,13 @@
 
   <ItemGroup>
     <PackageReference Include="Consul" Version="1.6.1.1" />
+    <PackageReference Include="Jaeger" Version="0.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.4" />
     <PackageReference Include="MongoDB.Driver" Version="2.11.0" />
+    <PackageReference Include="OpenTracing.Contrib.NetCore" Version="0.6.2" />
     <PackageReference Include="Steeltoe.Discovery.ClientCore" Version="2.4.4" />
     <PackageReference Include="Steeltoe.Extensions.Configuration.ConfigServerCore" Version="2.4.4" />
   </ItemGroup>
